@@ -39,6 +39,12 @@ Changes from 0.6-0 to 0.7-0
 13. Line properties such as linejoin and lineend are now understood.
     (Simon)
 
+14. The gpar() properties, font/fontface and fontfamily are now
+    supported. "fontface" has a direct mapping to CSS, but fontfamily is a
+    little bit more messy. "fontfamily" has to specify fallback fonts if none
+    are present in the browser. Most fonts have been catered for, those that
+    are present in names(pdfFonts()) and names(postscriptFonts()) are given
+    a reasonable attempt. (Simon)
 
 Changes from 0.5-10 to 0.6-0
 ============================
